--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,4 @@
-<md-grid-list cols="2" rowHeight="10em" gutterSize="20px">
+<md-grid-list cols="2" rowHeight="10em" gutterSize="20px" class="pwa-home">
   <md-grid-tile *ngFor="let item of items">
     <md-card>
       <md-card-header>
